# Reinforce-Tetris

./: .gitignore  CLAUDE.md  LICENSE  README.md  evaluate.py  evaluate_snake.py  play.py  play_snake.py  pyproject.toml  serve.py  train.py  train_snake.py
games/snake/: __init__.py  env.py  evaluate.py  game.py  model.py  play.py  replay.py  train.py  vec_env.py
games/tetris/: __init__.py  env.py  evaluate.py  game.py  model.py  play.py  replay.py  train.py  vec_env.py
models/: pretrained.pt  snake_pretrained.pt
snake_rl/: __init__.py  env.py  game.py  model.py  replay.py  vec_env.py
tests/: test_game.py  test_snake.py  test_tetris.py
tetris_rl/: __init__.py  env.py  model.py  replay.py  vec_env.py
webui/: index.html  snake.html
